fix issue with long movie titles breaking out of container

--- a/src/components/Results/DisplayMovies.module.css
+++ b/src/components/Results/DisplayMovies.module.css
@@ -67,6 +67,9 @@
     /* height: auto; */
     text-align: center;
     /* position: relative; */
+    /* text-overflow: ellipsis; */
+     overflow: scroll;
+     height: 10rem;
 }
 
 .movieContent *:not(:last-child) {
