--- a/src/components/Results/NominatedMovies.module.css
+++ b/src/components/Results/NominatedMovies.module.css
@@ -47,11 +47,11 @@
     justify-content: center;
     flex-direction: column;
     /* background-color: #F3F4F5; */
-    height: 4rem;
+    /* height: 4rem; */
     width: 100%;
     position: absolute;
-    bottom: 5px;
-    margin: 0;
+    bottom: 0px;
+    /* margin: 0; */
 }
 
 .btnContainer button {
@@ -70,16 +70,28 @@
 
 .movieDesc {
     font-size: 1.5rem;
-    margin-bottom: 1rem;
+    /* margin-bottom: 1rem; */
     line-height: 1.1;
-    background-color: hsl(220, 12%, 95%);
-    padding: 1rem;
+    /* padding: 1rem; */
+    height: 60%;
     /* border-bottom: 1px solid hsl(0, 0%, 85%); */
     /* padding-bottom: 1rem; */
+    overflow: scroll;
+}
+
+.movieDesc h3 {
+    /* overflow: hidden;
+    height: 5.5rem; */
+    /* overflow: hidden; */
+    /* text-overflow: ellipsis;
+    white-space: nowrap; */
+    padding: 0 1rem 1rem;
 }
 
 .movieDesc p {
     font-size: 1.3rem;
+    background-color: hsl(220, 12%, 95%);
     text-transform: uppercase;
     margin-bottom: 5px;
+    padding: 0.7rem;
 }
